--- a/gateway-protocols/Cargo.toml
+++ b/gateway-protocols/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 http = "1.1.0"
+bytes = "1.7.1"
 gateway-basic = { version = "0.1.0", path = "../gateway-basic" }
 gateway-error = { version = "0.1.0", path = "../gateway-error" }
