--- a/gateway-protocols/Cargo.toml
+++ b/gateway-protocols/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 http = "1.1.0"
 bytes = "1.7.1"
+tokio = { version = "1", feature = "io"}
 gateway-basic = { version = "0.1.0", path = "../gateway-basic" }
 gateway-error = { version = "0.1.0", path = "../gateway-error" }
