--- a/gateway-protocols/Cargo.toml
+++ b/gateway-protocols/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 http = "1.1.0"
 bytes = "1.7.1"
-tokio = { version = "1", feature = "io"}
+log = "0.4.22"
+tokio = { version = "1", feature = ["io", "io-util"]}
 gateway-basic = { version = "0.1.0", path = "../gateway-basic" }
 gateway-error = { version = "0.1.0", path = "../gateway-error" }
