--- a/gateway-protocols/Cargo.toml
+++ b/gateway-protocols/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 http = "1.1.0"
+httparse = "1.9.4"
 bytes = "1.7.1"
 log = "0.4.22"
 tokio = { version = "1", feature = ["io", "io-util"]}
