--- a/gateway-protocols/Cargo.toml
+++ b/gateway-protocols/Cargo.toml
@@ -8,6 +8,7 @@ http = "1.1.0"
 httparse = "1.9.4"
 bytes = "1.7.1"
 log = "0.4.22"
-tokio = { version = "1", feature = ["io", "io-util"]}
+env_logger = "0.11.5"
+tokio = { version = "1", feature = ["io", "io-util", "test-util"]}
 gateway-basic = { version = "0.1.0", path = "../gateway-basic" }
 gateway-error = { version = "0.1.0", path = "../gateway-error" }
